# multicam

./: .gitignore  README.md
multiCamAndroid/: CLAUDE.md  settings.gradle.kts
multiCamAndroid/app/: build.gradle.kts
multiCamAndroid/gradle/: libs.versions.toml
multiCamAndroid/gradle/wrapper/: gradle-wrapper.properties
multiCamCommon/: .gitignore  LICENSE  README.md
multiCamCommon/java/: README.md  build.gradle  settings.gradle
multiCamCommon/python/: README.md  pyproject.toml  setup.py
multiCamCommon/python/multicam_common/: __init__.py  commands.py  constants.py  status.py
multiCamCommon/specification/: PROTOCOL.md  multicam-api.yaml
multiCamCommon/swift/: Package.swift  README.md
multiCamControllerMacos/: AWS_S3_SETUP.md  MACOS_PORT_PLAN.md  README.md
multiCamControllerMacos/multiCamControllerMacos/: ContentView.swift  multiCamControllerMacosApp.swift
multiCamControllerMacos/multiCamControllerMacos.xcodeproj/: project.pbxproj
multiCamControllerMacos/multiCamControllerMacosTests/: multiCamControllerMacosTests.swift
multiCamControllerMacos/multiCamControllerMacosUITests/: multiCamControllerMacosUITests.swift  multiCamControllerMacosUITestsLaunchTests.swift
multiCamControllerPython/: .gitignore  pixi.toml
multiCamControllerPython/build_mac/: entitlements.mas.plist  entitlements.plist
multiCamControllerPython/resources/: icon.icns
multiCamControllerPython/scripts/: bump_version.py  upload_release.py
multiCamControllerPython/src/: __init__.py  main.py
multiCamIOS/: API_Documentation.md  README.md  multiCam_API.yaml
multiCamIOS/multiCam/: CalibrationData.swift  CameraIntrinsicsCollector.swift  CameraManager.swift  CameraPreviewView.swift  ContentView.swift  Info.plist  NTPClient.swift  NetworkManager.swift  TimeSync.swift  UploadManager.swift  multiCam.entitlements  multiCamApp.swift
multiCamIOS/multiCam.xcodeproj/: project.pbxproj
multiCamIOS/multiCamTests/: multiCamTests.swift
multiCamIOS/multiCamUITests/: multiCamUITests.swift  multiCamUITestsLaunchTests.swift
multiCamIOS/pythonController/: pixi.toml  testNetworkCommands.py
multiCamRelay/: .gitignore  Cargo.toml  HANDOFF.md  Makefile
multiCamRelay/.cargo/: config.toml
multiCamRelay/.github/workflows/: release.yml
multiCamRelay/assets/: Info.plist  multicam-relay.entitlements
multiCamRelay/scripts/: bump-version.sh  bundle-macos.sh  create-dmg.sh  notarize.sh  upload-s3.sh
multiCamRelay/src/: config.rs  device_registry.rs  main.rs  mdns.rs  protocol.rs  tcp_client.rs  updater.rs  url_handler.rs  websocket.rs
(+122 files in other folders)
