[package]
name = "multicam-relay"
version = "0.1.6"
edition = "2021"
description = "WebSocket to TCP relay for MultiCam device control"
authors = ["MultiCam Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
directories = "5"
parking_lot = "0.12"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
semver = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
